--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-    "name": "neutron_iac",
+    "name": "pulumi-aws-cloudfront",
     "devDependencies": {
         "@types/node": "^14"
     },
     "dependencies": {
-        "typescript": "^4.0.0",
-        "@pulumi/pulumi": "^3.0.0",
         "@pulumi/aws": "5.13.0",
-        "@pulumi/synced-folder": "*"
+        "@pulumi/pulumi": "^3.0.0",
+        "@pulumi/synced-folder": "*",
+        "js-yaml": "^4.1.0",
+        "typescript": "^4.0.0"
     }
 }
