--- a/.env.example
+++ b/.env.example
@@ -9,12 +9,15 @@ PARAMETERS=
     "distPath": "../dist"
 }
 
-# Pulumi Credentials
-PULUMI_ACCESS_TOKEN=
+# GitHub Pulumi repository access token
+GH_REPOSITORY_TOKEN=
+
+# AWS S3 STATE BUCKET
+PULUMI_CONFIG_PASSPHRASE=
+PULUMI_BACKEND_URL=s3://<bucket-name/directory>
+                  =s3://pulumi-promitia/neutron/neutron-webapp
 
 # AWS Credentials
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
-
-
