--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Pulumi Parameters
-PARAMETERS=
+PULUMI_PARAMETERS=
 {
     "projectName": "test-project",
     "projectDescription": "A TypeScript program to deploy a static website on AWS",
@@ -9,8 +9,8 @@ PARAMETERS=
     "distPath": "../dist"
 }
 
-# GitHub Pulumi repository access token
-GH_REPOSITORY_TOKEN=
+# GitHub Pulumi repository access token or shh
+GH_REPOSITORY_TOKEN= / SSH_PRIVATE_KEY=
 
 # AWS S3 STATE BUCKET
 PULUMI_CONFIG_PASSPHRASE=
