--- a/package.json
+++ b/package.json
@@ -1,13 +1,32 @@
 {
     "name": "pulumi-aws-cloudfront",
     "devDependencies": {
-        "@types/node": "^14"
+        "@types/node": "^14",
+        "prettier": "^2.8.0"
     },
     "dependencies": {
         "@pulumi/aws": "5.13.0",
+        "@pulumi/cloudflare": "^4.13.0",
         "@pulumi/pulumi": "^3.0.0",
         "@pulumi/synced-folder": "*",
         "js-yaml": "^4.1.0",
         "typescript": "^4.0.0"
+    },
+    "prettier": {
+        "arrowParens": "always",
+        "bracketSpacing": true,
+        "htmlWhitespaceSensitivity": "css",
+        "insertPragma": false,
+        "jsxBracketSameLine": false,
+        "jsxSingleQuote": false,
+        "printWidth": 100,
+        "proseWrap": "preserve",
+        "quoteProps": "as-needed",
+        "requirePragma": false,
+        "semi": true,
+        "singleQuote": true,
+        "tabWidth": 2,
+        "trailingComma": "all",
+        "useTabs": false
     }
 }
