Reformatted code to use envars

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,11 @@
-# Pulumi Parameters
-PULUMI_PARAMETERS=
-{
-    "projectName": "test-project",
-    "projectDescription": "A TypeScript program to deploy a static website on AWS",
-    "awsRegion": "sa-east-1",
-    "indexFile": "index.html",
-    "errorFile": "error.html",
-    "distPath": "../dist"
-}
-
-# GitHub Pulumi repository access token or shh
-GH_REPOSITORY_TOKEN= / SSH_PRIVATE_KEY=
-
 # AWS S3 STATE BUCKET
 PULUMI_CONFIG_PASSPHRASE=
 PULUMI_BACKEND_URL=s3://<bucket-name/directory>
-                  =s3://pulumi-promitia/neutron/neutron-webapp
 
 # AWS Credentials
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
+
+# GitHub Pulumi repository access token or ssh (required for Github Workflow)
+GH_REPOSITORY_TOKEN=
