--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@pulumi/aws": "5.13.0",
         "@pulumi/cloudflare": "^4.13.0",
         "@pulumi/pulumi": "^3.0.0",
+        "@pulumi/random": "^4.8.2",
         "@pulumi/synced-folder": "*",
         "js-yaml": "^4.1.0",
         "typescript": "^4.0.0"
