chore: updated vault installation

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -55,10 +55,11 @@ jobs:
           ssh-add - <<< "${{ secrets.SSH_KEY_FOR_BASTION_HOST }}"
           ssh -L 8443:${{ secrets.VAULT_ADDR }}:443 -Nf ec2-user@${{ secrets.AWS_BASTION_HOST }}
       - name: Install Vault
+        working-directory: /tmp
         run: |
-          wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor | sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg
-          echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
-          sudo apt update && sudo apt install vault
+          wget https://releases.hashicorp.com/vault/1.12.3/vault_1.12.3_linux_amd64.zip
+          unzip vault_1.12.3_linux_amd64.zip
+          sudo mv vault /usr/bin
       - name: Get App Values from Vault
         run: |
           # Get token for vault
