--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -112,18 +112,23 @@ jobs:
         env:
           PULUMI_CONFIG_PASSPHRASE: ${{ env.PULUMI_CONFIG_PASSPHRASE }}
           PULUMI_BACKEND_URL: '${{ env.PULUMI_BACKEND_URL }}'
-      - name: Refresh Pulumi
+      - name: Pulumi Refresh
         working-directory: ./pulumi-cloudfront
         if: ${{ env.PULUMI_REFRESH_ENABLED == 'true' }}
         run: pulumi refresh -y --non-interactive
         env:
           PULUMI_CONFIG_PASSPHRASE: ${{ env.PULUMI_CONFIG_PASSPHRASE }}
           PULUMI_BACKEND_URL: '${{ env.PULUMI_BACKEND_URL }}'
+      - name: Pulumi Cancel
+        working-directory: ./pulumi-cloudfront
+        if: ${{ env.PULUMI_CANCEL_ENABLED == 'true' }}
+        run: pulumi cancel -y --non-interactive
+        env:
+          PULUMI_CONFIG_PASSPHRASE: ${{ env.PULUMI_CONFIG_PASSPHRASE }}
+          PULUMI_BACKEND_URL: '${{ env.PULUMI_BACKEND_URL }}'
       - name: Deploy Infrastructure
         working-directory: ./pulumi-cloudfront
-        run: |
-          pulumi cancel -y --non-interactive
-          pulumi up -y --non-interactive --skip-preview
+        run: pulumi up -y --non-interactive --skip-preview
         env:
           ENVIRONMENT: ${{ inputs.environment }}
           PULUMI_CONFIG_PASSPHRASE: ${{ env.PULUMI_CONFIG_PASSPHRASE }}
