--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@pulumi/aws": "^5.0.0",
         "@pulumi/awsx": "^0.40.0",
         "@pulumi/cloudflare": "^4.12.1",
+        "@pulumi/command": "^0.7.2",
         "@pulumi/pulumi": "^3.0.0",
         "@pulumi/random": "^4.11.2",
         "@pulumi/synced-folder": "^0.10.1"
