fix: updated version of node

--- a/.github/workflows/cd-github-secrets.yml
+++ b/.github/workflows/cd-github-secrets.yml
@@ -30,8 +30,6 @@ on:
         required: true
       PULUMI_CONFIG_PASSPHRASE:
         required: true
-      SSL_CERTIFICATE_ARN:
-        required: true
 
 jobs:
   deploy:
@@ -43,7 +41,6 @@ jobs:
       CLOUDFLARE_API_KEY: ${{ secrets.CLOUDFLARE_API_KEY }}
       CLOUDFLARE_EMAIL: ${{ secrets.CLOUDFLARE_EMAIL }}
       CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
-      SSL_CERTIFICATE_ARN: ${{ secrets.SSL_CERTIFICATE_ARN }}
       PULUMI_CONFIG_PASSPHRASE: ${{ secrets.PULUMI_CONFIG_PASSPHRASE }}
       # environment variables
       APP_DIR_PATH: ${{ vars.APP_DIR_PATH }}
@@ -56,24 +53,25 @@ jobs:
       PULUMI_BACKEND_URL: ${{ vars.PULUMI_BACKEND_URL }}
       PULUMI_DEBUG: ${{ vars.PULUMI_DEBUG }}
       SSL_ENABLED: ${{ vars.SSL_ENABLED }}
+      SSL_CERTIFICATE_ARN: ${{ vars.SSL_CERTIFICATE_ARN }}
       # local
       PULUMI_STACK: ${{ inputs.environment }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Setup node version
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.14.2
+      - name: Install App dependencies
+        run: yarn install
+      - name: Build App
+        run: ${{ inputs.build_command }}
       - name: Checkout Pulumi
         uses: actions/checkout@v3
         with:
           repository: rubenqc/pulumi-aws-cloudfront
           path: pulumi-cloudfront
-      - name: Setup node version
-        uses: actions/setup-node@v3
-        with:
-          node-version: 14
-      - name: Install App dependencies
-        run: npm install
-      - name: Build App
-        run: ${{ inputs.build_command }}
       - name: Install Pulumi dependencies
         working-directory: ./pulumi-cloudfront
         run: npm install
