feat: added redirect rules

--- a/.github/workflows/cd-github-secrets.yml
+++ b/.github/workflows/cd-github-secrets.yml
@@ -48,6 +48,8 @@ jobs:
       APP_ERROR_DOCUMENT: ${{ vars.APP_ERROR_DOCUMENT }}
       APP_INDEX_DOCUMENT: ${{ vars.APP_INDEX_DOCUMENT }}
       APP_NAME: ${{ vars.APP_NAME }}
+      APP_REDIRECTS_ENABLED: ${{ vars.APP_REDIRECTS_ENABLED }}
+      APP_REDIRECTS_RULES: ${{ vars.APP_REDIRECTS_RULES }}
       CLOUDFLARE_ACL_ENABLED: ${{ vars.CLOUDFLARE_ACL_ENABLED }}
       CLOUDFLARE_RECORD_ENABLED: ${{ vars.CLOUDFLARE_RECORD_ENABLED }}
       PULUMI_BACKEND_URL: ${{ vars.PULUMI_BACKEND_URL }}
